# siwe-ex

./: .gitignore  checksum-Elixir.Siwe.Native.exs  mix.exs
.github/workflows/: release.yml
lib/: siwe.ex
lib/siwe/: async_runtime_options.ex  message.ex  native.ex  verify_options.ex
native/siwe_native/: Cargo.toml
native/siwe_native/src/: lib.rs  runtime.rs
test/: siwe_test.exs
