[package]
name = "siwe_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "siwe_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
alloy = { version = "0.2", features = ["providers"] }
http = "1.0.0"
iri-string = { version = "0.7", features = ["serde"] }
once_cell = "1.19.0"
rustler = "0.34"
siwe = { git = "https://github.com/royal-markets/siwe-rs", features = ["alloy"], branch = "alloy" }
time = { version = "0.3", features = ["parsing", "formatting"] }
tokio = { version = "1.39.1", features = ["rt-multi-thread"] }
